Added globe.ico favicon and updated index.html

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,9 @@
     <title>Gadgetmozingo.store</title>
 
     <!-- Optional: Blank Favicon -->
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/globe.ico" />
+
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
